--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .form {
   display: flex;
+  font-size: 1.5em
 }
 
 .form-element {
@@ -14,4 +15,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+ul {
+  font-size: 1.5em;
 }
