--- a/src/components/styling/LoanView.css
+++ b/src/components/styling/LoanView.css
@@ -1,12 +1,12 @@
-table {
+loan-view-table {
     display: grid
 }
 
-tbody {
+loan-view-tbody {
     display: grid
 }
 
-tr {
+loan-view-tr {
     display: flex;
     flex-direction: column;
     justify-content: center;
