--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@
   align-items: center;
 }
 
+header {
+  background-color: #2E3637;
+  color: #FFFFFF;
+  width: 100%;
+  border-bottom: 3px solid #FADE4B;
+  text-align: center;
+}
+
 #loan-view {
   margin: 1em;
 }
@@ -14,17 +22,45 @@
 
 .form {
   display: flex;
-  font-size: 1.5em
+  font-size: 1.3em
 }
 
 .form-element {
   margin: 1em;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+
+}
+
+.form-element input {
+  padding: 4px;
+  border-style: none;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.form-element select {
+  font-size: 14px;
+  border-style: none;
 }
 
 ul {
   font-size: 1.5em;
+}
+
+.loan-btn {
+  background: linear-gradient(to bottom, #12b447, #10a140);
+  color: #FFFFFF;
+  padding: 0.5em;
+  font-size: 14px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+#form-btn {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  padding: 0.5em;
 }
