--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,11 @@ ul {
   justify-items: center;
   padding: 0.5em;
 }
+
+.error-message {
+  display: flex;
+  font-size: 20px;
+  color: #CE0000;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
