add function to determine first payment date

--- a/src/components/styling/CarView.css
+++ b/src/components/styling/CarView.css
@@ -9,7 +9,7 @@
 }
 
 .car-card {
-    background-color: #ffffff;
+    background-color: #F0F0F0;
     display: flex;
     flex-direction: column;
     padding: 1em;
