--- a/src/components/styling/CarView.css
+++ b/src/components/styling/CarView.css
@@ -1,7 +1,7 @@
 #car-view {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column
 }
 
 .no-cars-message {
